tests/bad/single/43684882/comp249-psst-starter-master/views/general.tpl
% rebase('base.tpl')

%for post in content:
<img src="{{post[3]}}" height = "240px" width = "240px">
{{post[1]}} {{post[2]}} {{!post[4]}}</article> <br>
% end